--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,13 +4,11 @@ layout: default
 
 <div class="home-hero">
   <h1>Welcome to my blog :)</h1>
-  <p>I'm growing a lot as a software developer, and I thought: what better way to document what I’m learning than through a blog!?</p>
-  <p>Quick recap of who I am: My preferred language is JavaScript. I started out as a full-stack WordPress developer, then moved into React development, and now I do a mix of both. I’m currently niching down to help .NET developers with frontend work. I built an MVC app that accepts Stripe payments to showcase my C# abilities.</p>
+  <p>I'm growing a lot as a software developer, and I thought: what better way to document what I'm learning than through a blog!?</p>
+  <p>Quick recap of who I am: My preferred language is JavaScript. I started out as a full-stack WordPress developer, then moved into React development, and now I do a mix of both. I'm currently niching down to help .NET developers with frontend work. I built an MVC app that accepts Stripe payments to showcase my C# abilities.</p>
 </div>
 
 <hr />
-
-<h2>Recent Posts</h2>
 
 <ul class="post-list">
   {% for post in site.posts %}
